--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,24 @@
 asgiref==3.7.2
+async-timeout==4.0.3
+authentication==1.1.0
+beautifulsoup4==4.12.2
+blinker==1.6.3
+click==8.1.7
+colorama==0.4.6
 Django==4.2.5
+django-bootstrap-v5==1.0.11
+django-leaflet==0.29.0
+Flask==3.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+passlib==1.7.4
+Pillow==10.0.1
+pycryptodome==3.19.0
+redis==5.0.1
+soupsieve==2.5
 sqlparse==0.4.4
 tzdata==2023.3
+Werkzeug==3.0.0
+WTForms==3.1.0
+setuptools<67
