--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ beautifulsoup4==4.12.2
 blinker==1.6.3
 click==8.1.7
 colorama==0.4.6
-Django==4.2.5
+Django==4.2.6
 django-bootstrap-v5==1.0.11
 django-leaflet==0.29.0
 Flask==3.0.0
@@ -19,6 +19,6 @@ redis==5.0.1
 soupsieve==2.5
 sqlparse==0.4.4
 tzdata==2023.3
-Werkzeug==3.0.0
+Werkzeug==3.0.1
 WTForms==3.1.0
-setuptools<67
+Setuptools==65.5.1
